<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_dark_primary"
    android:orientation="vertical"
    tools:context=".ui.DetalleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                app:cardBackgroundColor="@color/pink_light_primary"
                app:cardCornerRadius="11dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivDetImg"
                        android:layout_width="177dp"
                        android:layout_height="177dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="7dp"
                        tools:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tvDetNom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/nom_example"
                        android:textColor="@color/black_primary_text"
                        android:textSize="21dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDetDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/descripcion_example"
                        android:textColor="@color/gray_secondary_text" />

                    <TextView
                        android:id="@+id/tvDetHabTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/hab_min"
                        android:textColor="@color/black_primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDetHab"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/hab_example"
                        android:textColor="@color/gray_secondary_text" />

                    <TextView
                        android:id="@+id/tvDetTiempoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/tiempo"
                        android:textColor="@color/black_primary_text"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="7dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvDetTiempo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:layout_marginEnd="3dp"
                            android:text="@string/tiempo_example"
                            android:textColor="@color/gray_secondary_text" />

                        <TextView
                            android:id="@+id/tvDetWeek"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:layout_marginEnd="3dp"
                            android:text="@string/semanas"
                            android:textColor="@color/gray_secondary_text" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvDetPrecioTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginEnd="3dp"
                        android:layout_marginBottom="3dp"
                        android:text="@string/precio"
                        android:textColor="@color/black_primary_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDetPrecio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/price_example"
                        android:textColor="@color/gray_secondary_text" />

                    <Button
                        android:id="@+id/btnDetMail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="7dp"
                        android:text="@string/interesa" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>